--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 250px;
+    width: 100%;
+    /* height: inherit; */
+    height: 180px;
 }
 
 .content-div:hover {
@@ -28,4 +30,5 @@
         rgba(112, 157, 255, 0.8), 
         hsla(242, 74%, 61%, 0.8)
     )!important;
+    text-align: center;
 }
